Added NSC obstacles to the Discussion part

--- a/2-components.tex
+++ b/2-components.tex
@@ -81,7 +81,7 @@ Other lesser known controllers and controller frameworks are for example a very 
 \clearpage
 \subsection{Switches}
 
-OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation and NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardized, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialized switches, routers, middleboxes etc. and utilize the network elements on ordinary X86 servers.
+OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation and NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardized, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialized switches, routers, middle boxes etc. and utilize the network elements on ordinary X86 servers.
 
 VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches \cite{VSwitch}. It has been ported to multiple virtualization platforms such as VirtualBox
 and KVM, is included in few Linux kernels and bundled with many SDN projects and is also integrated to various virtual management systems like OpenStack. Open VSwitch offers many features like several QoS and security components and it supports few different protocols.
@@ -112,9 +112,12 @@ Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware ab
 
 \subsection{Future developments}
 
-SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight is not evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at year 2013's Open Network Summit and according to On.Lab ONOS will be released this year but no definitive date has been given.
+SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight is not evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at Open Network Summit 2013, and according to On.Lab ONOS will be released this year but no definitive date has been given.
 
 \subsection{Ongoing EU Projects}
+
+There are numerous projects, which are operating under Framework Programme for Research (FP7) in Europe. In this section we are going to introduce some of these projects briefly. 
+
 \subsubsection{FELIX}
 
 The main goal of FELIX project (FEderated Test-beds for Large-scale Infrastruction eXperiments) is to build a common ground for users, in order to monitor, request, and manage a slice of distributed Internet network in Japan and Europe. In FELIX, new technologies, which are rising and Software Defined Networking control frameworks are investigated (such as OFELIA OCF, and Open Grid Forum) in order to assess their applicability in the project. \cite{FELIXproject}
