--- a/3-chaining.tex
+++ b/3-chaining.tex
@@ -42,9 +42,9 @@ Traditional network infrastructure, has brought network service providers (NSPs)
 
 Conventionally, advanced services such as, firewall, deep packet inspection (DPI), intrusion detection and prevention systems, caching, etc., are fixed inside the network, which make the network inflexible and static. Moreover, due to this inflexibility, configuration between these network services suffers from lack of automation. Therefore, troubleshooting in the network might consume a lot of time varies from hours to even weeks depending to the size of network. 
 
-Due to inter-dependencies and low power of automatic configuration that middleboxes (services) have, if there is a new service want to be introduced or removed from the network platform, they need careful engineering and customization. By increasing the automation, cost of OPEX and CAPEX can be reduced.  Decreasing the network touch points, consequently reduces the possible configuration mistakes, which reduces the cost of OPEX. In addition, optimizing and refactoring the use of existing resources by virtualizing certain network functions can reduce CAPEX cost. 
+Due to inter-dependencies and low power of automatic configuration that middleboxes (services) have, if there is a new service want to be introduced or removed from the network platform, they need careful engineering and customization. By increasing the automation, cost of OPEX and CAPEX can be reduced. Decreasing the network touch points, consequently reduces the possible configuration mistakes, which reduces the cost of OPEX. In addition, optimizing and refactoring the use of existing resources by virtualizing certain network functions can reduce CAPEX cost. 
 
-Today, network operators cannot reuse middleboxes, since they are configured to provide only one service. So, if one box is removed from the network, then the whole chain will break. With current issues that network platforms are facing,  the need for dynamic service chaining in SDN is gradually increasing. Dynamic service chaining can bring high availability and rapid failure restoration with reliable testing abilities, to the network platform. 
+Today, network operators cannot reuse middleboxes, since they are configured to provide only one service. So, if one box is removed from the network, then the whole chain will break. With current issues that network platforms are facing, the need for dynamic service chaining in SDN is gradually increasing. Dynamic service chaining can bring high availability and rapid failure restoration with reliable testing abilities, to the network platform. 
 
 Figure ~\ref{fig:NSC}, illustrates the capabilities of network service chaining (NSC), which can introduce dynamic, upgradable and configurable software to the network. NSC enables data to flow without any interference caused by middleboxes residing at different nodes. Therefore, different services in the network, can be utilized only if needed, and can be omitted whenever their service is unnecessary. NSC takes advantage of virtualization, so regardless of the layer (physical or higher layers) that middleboxes are implemented, they can be integrated seamlessly. 
        
@@ -56,7 +56,7 @@ Figure ~\ref{fig:NSC}, illustrates the capabilities of network service chaining 
 \label{fig:NSC}
 \end{figure}
 
-Dynamic NSC, introduces more intelligent traffic steering to the network, which accelerates the performance of network. When there is single network domain, middleboxes such as load balancers, traffic schedulers, security gateways, etc, provide better fairness and  security. However, when it comes to multiple network domain, further operator investment is needed, either in terms of software or hardware. Thus, this extra operator investment causes serious decline in terms of delay, which depending to the number of policy elements that data is passing and cross-domain network load, this deferment varies. But, when NSC is implemented in the edge of network, multimedia flows and sensitive data can steer through different network domains in predictable and reliable manner. Figure ~\ref{fig:NSCbenefit}, depicts this benefit of dynamic NSC. 
+Dynamic NSC, introduces more intelligent traffic steering to the network, which accelerates the performance of network. When there is single network domain, middleboxes such as load balancers, traffic schedulers, security gateways, etc., provide better fairness and security. However, when it comes to multiple network domain, further operator investment is needed, either in terms of software or hardware. Thus, this extra operator investment causes serious decline in terms of delay, which depending to the number of policy elements that data is passing and cross-domain network load, this deferment varies. But, when NSC is implemented in the edge of network, multimedia flows and sensitive data can steer through different network domains in predictable and reliable manner. Figure ~\ref{fig:NSCbenefit}, depicts this benefit of dynamic NSC. 
 
 
 \begin{figure}[h!]
@@ -92,7 +92,7 @@ Figure \ref{fig:LispPacketForwarding} illustrates the order of sending packet fr
 
 In a network, which is virtualized, EID can play the role of virtual address space and RLOC can play the role of physical network address. In software defined networking, control plane is separated from data plane. Therefore, LISP in regards to data plane, defines how encapsulation of virtualized network addresses should be done in addresses from underlying network. In addition, control plane stores the binding information between EIDs and RLOCs, and associated forwarding policies, therefore data plane can fetch these information whenever it receives new flows. \cite{ODLLISP}  
 
-LISP Flow Mapping project in OpenDaylight, utilizes LISP infrastructure, which provides mapping system services. This project, consists of LISP Map Resolver service and LISP Map Server service in order to store and retrieve the mapping data to ODL applications and  also data plane nodes. Mapping data can contain different routing policies including load balancing and traffic engineering. Moreover, it can also contain mapping of virtual addresses (EIDs) to physical network addresses (RLOCs), in order to access virtual nodes. In LISP mapping service, mappings and policies can be specified through the ODL northbound REST API, in order to utilize this service. In addition, data plane devices, which are compatible with LISP control protocol can utilize this service via southbound LISP plugin through the LISP control protocol. Figure \ref{fig:LispInODL}, illustrates the above mentioned components. 
+LISP Flow Mapping project in OpenDaylight, utilizes LISP infrastructure, which provides mapping system services. This project, consists of LISP Map Resolver service and LISP Map Server service in order to store and retrieve the mapping data to ODL applications and also data plane nodes. Mapping data can contain different routing policies including load balancing and traffic engineering. Moreover, it can also contain mapping of virtual addresses (EIDs) to physical network addresses (RLOCs), in order to access virtual nodes. In LISP mapping service, mappings and policies can be specified through the ODL northbound REST API, in order to utilize this service. In addition, data plane devices, which are compatible with LISP control protocol can utilize this service via southbound LISP plugin through the LISP control protocol. Figure \ref{fig:LispInODL}, illustrates the above mentioned components. 
 
 \begin{figure}[h!t]
 \centering
@@ -138,6 +138,6 @@ The nw-EPC is an open source software package, which is implementation of SAE (S
 \label{fig:SAE}
 \end{figure}
 
-The control plane in nw-EPC incorporates the SAE gateway behaviour with the help of expandable FSM framework. This enables nw-EPC node gateway to function as both SAE, and PGW gateways and also other gateway functions, such as WiMAX ASN-GW or GGSN. The data plane in nw-EPC supports IPv4 packet classification, and basic GTP (GPRS Tunneling Protocol)  tunneling/detunneling. However, there is lack of support for IPv6, DPI, QOS, traffic shaping and policing.  
+The control plane in nw-EPC incorporates the SAE gateway behaviour with the help of expandable FSM framework. This enables nw-EPC node gateway to function as both SAE, and PGW gateways and also other gateway functions, such as WiMAX ASN-GW or GGSN. The data plane in nw-EPC supports IPv4 packet classification, and basic GTP (GPRS Tunneling Protocol) tunneling/detunneling. However, there is lack of support for IPv6, DPI, QOS, traffic shaping and policing.  
 
 \clearpage
