--- a/references.bib
+++ b/references.bib
@@ -972,3 +972,10 @@
   urldate = {07-08-2014}
 }
 
+@techreport{QN14, 
+AUTHOR = {P. Quinn, T. Nadeau}, 
+TITLE = {Service Function Chaining Problem Statement}, 
+YEAR = {2014}, 
+MONTH = {August}, 
+URL={http://tools.ietf.org/html/draft-ietf-sfc-problem-statement-09},
+ }     
