Fixed short forms

--- a/2-components.tex
+++ b/2-components.tex
@@ -1,6 +1,6 @@
 \section{Open Source SDN Components}
 
-Even though the concept of software defined networking dates back to year 2004 \cite{robert2012system} the first widely recognised applications followed only several years later. The most notable one is the widespread OpenFlow protocol \cite{OpenFlow1.0.0} which made its official debut in 2009 and has since become the most prevalent protocol for SDN. The available applications on the market reflect the pervasiveness of OpenFlow as practically all of them are built to support the protocol. Keeping SDN’s basic concepts and architectural solutions in mind it doesn’t come as a surprise that the network controllers and switch implementations are the most common SDN related applications. In this section, we present a comprehensive survey of existing open source components for SDN.
+Even though the concept of software defined networking dates back to year 2004 \cite{robert2012system} the first widely recognised applications followed only several years later. The most notable one is the widespread OpenFlow protocol \cite{OpenFlow1.0.0} which made its official debut in 2009 and has since become the most prevalent protocol for SDN. The available applications on the market reflect the pervasiveness of OpenFlow as practically all of them are built to support the protocol. Keeping SDN’s basic concepts and architectural solutions in mind it does not come as a surprise that the network controllers and switch implementations are the most common SDN related applications. In this section, we present a comprehensive survey of existing open source components for SDN.
 
 \subsection{Controllers}
 
@@ -16,12 +16,12 @@ Most OpenFlow controllers are organized in the same fashion as shown in figure ~
 
 	Hailed as the first OpenFlow controller, NOX was developed side-by-side with OpenFlow but peculiarly released a year before OpenFlow’s official release \cite{NOX}. NOX is written in C++ and is meant for developing further customized SDN controllers, but it is commonly regarded as complex and cumbersome to use for anything but really performance critical applications. The developer Murphy McCauley himself recommends using POX \cite{POX}, the Python version of NOX, for most tasks \cite{CHU12}. There is also a newer version of NOX that according to developers has more streamlined architecture, cleaner codebase and is more efficient. At the time of writing this the latest modification to source code was an over 7 months old bugfix, so NOX’s actual viability in current SDN development is questionable.
 
-	Beacon is another notable OF controller \cite{Beacon}. It was released in 2010 and it’s written in Java. Despite Java’s reputation as an inefficient programming language Beacon has fared well performance-wise in comparison with other controllers \cite{Erickson13}. Java was chosen to address C’s and C++’s portability problems and to reduce developer’s burden with significantly shorter compilation times and better error logging. Other controllers with similar focus on easier development are for example Python-based Ryu \cite{Ryu} and Ruby-based Trema \cite{Trema}.
+	Beacon is another notable OF controller \cite{Beacon}. It was released in 2010 and it is written in Java. Despite Java’s reputation as an inefficient programming language Beacon has fared well performance-wise in comparison with other controllers \cite{Erickson13}. Java was chosen to address C and C++ portability problems and to reduce developer’s burden with significantly shorter compilation times and better error logging. Other controllers with similar focus on easier development are for example Python-based Ryu \cite{Ryu} and Ruby-based Trema \cite{Trema}.
 
-One of the features that makes Beacon perhaps more notable than other aforementioned controllers is the fact that it serves as a basis for one of the most popular OpenFlow controllers: Floodlight \cite{Floodlight}. Floodlight is developed by Big Switch Networks, a startup founded by networking veterans. Unlike Beacon, Floodlight doesn’t rely on OSGi framework and offers more features such as REST API and support for non-OpenFlow domains. The documentation for Floodlight is also generally good and surpasses the Beacon documentation with ease.
+One of the features that makes Beacon perhaps more notable than other aforementioned controllers is the fact that it serves as a basis for one of the most popular OpenFlow controllers: Floodlight \cite{Floodlight}. Floodlight is developed by Big Switch Networks, a startup founded by networking veterans. Unlike Beacon, Floodlight does not rely on OSGi framework and offers more features such as REST API and support for non-OpenFlow domains. The documentation for Floodlight is also generally good and surpasses the Beacon documentation with ease.
  Big Switch has in the past lobbied for Floodlight to be included in Open Daylight Project’s codebase \cite{BAN13} but the project opted for Cisco’s controller implementation. 
 
-Open Daylight Project \cite{ODL}, or ODL in shorthand, is commonly considered the leading SDN project with its substantial company backing and large developer community. The project members involved include practically every company relevant to the field. These are for instance Cisco, Microsoft, IBM, Hewlett-Packard, Juniper, Red Hat, VMware and many more. Feature highlights of Open Daylight include a robust REST API and south-bound communication which allows for using other non-Openflow protocols: OVSDB, NETCONF, LISP, BGP, PCEP and SNMP. Naturally ODP contains components to take advantage of the protocols as well as other components not found in any other SDN projects e.g. DDOS detection and counter-measures. The basic architecture is rather similar to other controllers, but different core components, applications built on top of them and protocol plugins that offer different services and use different interfaces complicate the organization a bit. Figure ~\ref{fig:ODL} shows the architecture and some of the components in the bundle. For prototyping applications that only make use of OpenFlow the sheer number of different components in ODP may prove intimidating and distracting, but generally ODP community offers decent documentation and guides though quality varies from one component to another. In comparison with Floodlight ODP is likely to be more viable in real business environment because of the features it offers and its fast evolving nature but when developing quick prototypes or SDN applications that only make use of OpenFlow, Floodlight may be a better choice due to it being simpler, smaller and at the moment better documented.
+Open Daylight Project \cite{ODL}, or ODL in shorthand, is commonly considered the leading SDN project with its substantial company backing and large developer community. The project members involved include practically every company relevant to the field. These are for instance Cisco, Microsoft, IBM, Hewlett-Packard, Juniper, Red Hat, VMware and many more. Feature highlights of Open Daylight include a robust REST API and south-bound communication which allows for using other non-Openflow protocols: OVSDB, NETCONF, LISP, BGP, PCEP and SNMP. Naturally ODP contains components to take advantage of the protocols as well as other components not found in any other SDN projects e.g. DDOS detection and counter-measures. The basic architecture is rather similar to other controllers, but different core components, applications built on top of them and protocol plugins that offer different services and use different interfaces complicate the organization a bit. Figure ~\ref{fig:ODL} shows the architecture and some of the components in the bundle. For prototyping applications that only make use of OpenFlow the sheer number of different components in ODP may prove intimidating and distracting, but generally ODP community offers decent documentation and guides though quality varies from one component to another. In comparison with Floodlight ODP is likely to be more viable in real business environment because of the features it offers and its fast evolving nature but when developing quick prototypes or SDN applications that only make use of OpenFlow, Floodlight may be a better choice due to being simpler, smaller and at the moment better documentation.
 
 \begin{figure}[h!t]
 \centering
@@ -81,7 +81,7 @@ Other lesser known controllers and controller frameworks are for example a very 
 \clearpage
 \subsection{Switches}
 
-OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation and NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardized, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialized switches, routers, middle boxes etc. and utilize the network elements on ordinary X86 servers.
+OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation and NFV being a hot topic for conversation along with SDN there is a demand and supply for standardized, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialized switches, routers, middle boxes etc. and utilize the network elements on ordinary X86 servers.
 
 VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches \cite{VSwitch}. It has been ported to multiple virtualization platforms such as VirtualBox
 and KVM, is included in few Linux kernels and bundled with many SDN projects and is also integrated to various virtual management systems like OpenStack. Open VSwitch offers many features like several QoS and security components and it supports few different protocols.
@@ -96,13 +96,13 @@ Like in any other field in computer science, fast and professional development a
 
 The most well known tool for simulating networks is Mininet \cite{MN14}. Mininet could be considered essential for conducting research on SDN and testing software in a realistic network environment. Mininet supports custom network topologies which can be easily created with its Python API and its switches support OpenFlow. Connecting to real networks should be quite straightforward though a single Linux OS can support over four thousand switches and hosts simultaneously \cite{MN14}. 
 
-A little bit more specific tool is STS which stands for SDN Troubleshooting System \cite{STS}. It can be used to simulate and troubleshoot specific devices on the network. A bit similar program is ns-3 which is used for simulating network events \cite{NS3}. For performance testing and benchmarking there are OFLOPS and PerfSonar \cite{OFLOPS, Perf} and for testing SDN software itself one can utilize NICE \cite{NICE} for controller applications, OFTest for compliance testing \cite{OFTest} and TestOn for testing automatization \cite{TestOn}. It’s also worth to mention HyperGlance by Real Status \cite{Hyper}. It is a network visualization tool which supports Open Daylight. It could most likely to be used for debugging as in addition to network topology it displays traffic too. Unlike other pieces of software mentioned HyperGlance isn’t an open source project or free software, but at the time of writing it was in open beta phase and acquiring the software required only registration to the site.
+A little bit more specific tool is STS which stands for SDN Troubleshooting System \cite{STS}. It can be used to simulate and troubleshoot specific devices on the network. A bit similar program is ns-3 which is used for simulating network events \cite{NS3}. For performance testing and benchmarking there are OFLOPS and PerfSonar \cite{OFLOPS, Perf} and for testing SDN software itself one can utilize NICE \cite{NICE} for controller applications, OFTest for compliance testing \cite{OFTest} and TestOn for testing automatization \cite{TestOn}. It is also worth to mention HyperGlance by Real Status \cite{Hyper}. It is a network visualization tool which supports Open Daylight. It could most likely to be used for debugging as in addition to network topology it displays traffic too. Unlike other pieces of software mentioned HyperGlance is not an open source project or free software, but at the time of writing it was in open beta phase and acquiring the software required only registration to the site.
 
 \subsection{Other SDN projects}
 
-Apart from controllers, switches, testing and simulation tools there are many notable projects that don’t straightforwardly fall into these categories.
+Apart from controllers, switches, testing and simulation tools there are many notable projects that do not straightforwardly fall into these categories.
 
-There hasn’t been as much talk about security with SDN as there have been on for example network virtualization, but the centralized network control introduces fundamental vulnerabilities that need to be addressed. Roy Chua of SDNCentral.com points out, that the SDN controller should always be closely controlled and also protected from an outside attack like DDOS because without it SDN network's functionality is crippled \cite{CHU2} . Other aspects to be aware of are protecting communication throughout the network and maintaining and monitoring network performance and function. Open Daylight for example includes a component for protection from Denial of Service attacks and OpenFlowSec.org offers multiple security solutions for SDN ranging from malware protection to security policy enforcement.
+There has not been as much talk about security with SDN as there have been on for example network virtualization, but the centralized network control introduces fundamental vulnerabilities that need to be addressed. Roy Chua of SDNCentral.com points out, that the SDN controller should always be closely controlled and also protected from an outside attack like DDOS because without it SDN networks' functionality is crippled \cite{CHU2}. Other aspects to be aware of are protecting communication throughout the network and maintaining and monitoring network performance and function. Open Daylight for example includes a component for protection from Denial of Service attacks and OpenFlowSec.org offers multiple security solutions for SDN ranging from malware protection to security policy enforcement.
 
 Other projects aim to enhance the performance of the network. InCntre’s Flowscale \cite{Flowscale} is a network load balancer, but the development has stopped after version 0.6. This may be because of many controller applications including load balancer of their own. Both the BIRD by CZ.NIC Labs and CPqD’s RouteFlow offer IP routing \cite{Bird, RouteFlow}.
 
