--- a/4-discuss.tex
+++ b/4-discuss.tex
@@ -3,6 +3,7 @@
 \subsection{Security concerns}
 
 There is a lot of theoretical discussion around SDN, but widely accepted commercial products are still on their way \cite{Sorensen12}. Most of the discussion has been about the SDN architecture and organization, but while SDN is by no means more vulnerable than traditional networks, the threats exist and are partly different and specific to SDN \cite{Kreutz13}. The most glaring issue comes with one of the cornerstones of SDN. The centralization of control means that the successful attack to a SDN controller could easily compromise the functionality of the whole network. These attacks could be carried out as Distributed Denial of Service (DDoS) attacks by attacking controller directly or modifying switch behaviour (forged requests, cloning of flows etc.), exploiting administrative stations (gaining access to controller servers themselves) or exploiting a controller with a malicious network application  \cite{Kreutz13}. Network should also be able to successfully recover from a problem or an incident and hence correct and safe logging and tracing of network states are likely to be required.
+
 Kreutz et al. suggest other general solutions to counter possible security threats. These are controller replication and systems diversity, dynamic associations between network devices and controllers (e.g. If a controller fails, switches associate with a new one), self-healing and software update and patching mechanisms, establishing trust between network devices and controllers and network applications and controllers, establishing security domains (e.g. sandboxing) and using secure components. In conclusion, SDN security is still relatively unexplored area and for commercial uses of SDN acknowledging and addressing the issues is required.
 
 \subsection{Service Chaining Obstacles}
@@ -13,5 +14,6 @@ A direct impact of topological dependency is that configuration of network becom
 
 Because of topological nature of current network deployment, there is lack of traffic selection. So, all the traffic on specific section, should goes through the whole service function chain, no matter the traffic needs to be processed by particular service or not. Therefore, forwarding technology forces how the data should  traverse among services, which causes inflexibility in the network. In addition, classification happens at every services that the traffic passes through, which service functions cannot leverage the classification results from other service functions. 
 
-Lastly, End-to-end service visibility is limited in current network deployment. Therefore, when service function chain is expanded across administrative boundaries, the troubleshooting becomes tough and complex. Moreover, different topologies are deployed on physical and virtual environments, which, this topological variance introduces more challenges to the network.In section 3, we discussed about network service chaining and its benefits, however NSC comes with its own challenges. Current network service structure is tight with the network topology, which makes introducing new services or removing them from the chain troublesome. If more services needed in the chain, the topology should be changed alongside with the new service structure. Due to this coupling between network topology and the service chain, service selection or changing the service transit order, based on flow direction is not feasible. \cite{QN14}
+Lastly, End-to-end service visibility is limited in current network deployment. Therefore, when service function chain is expanded across administrative boundaries, the troubleshooting becomes tough and complex. Moreover, different topologies are deployed on physical and virtual environments, which, this topological variance introduces more challenges to the network.
 
+\clearpage
