correct some parts

--- a/2-components.tex
+++ b/2-components.tex
@@ -4,7 +4,7 @@ Even though the concept of software defined networking dates back to year 2004 \
 
 \subsection{Controllers}
 
-Most OpenFlow controllers are organized in the same fashion as shown in figure ~\ref{fig:architecture}. Most of the current controllers offer a so-called northbound interface (usually a REST API) to communicate with applications and to offer them services. The southbound interface is for communicating with the actual physical and virtual switches in the network.
+Most OpenFlow controllers are organized in the same fashion as shown in Figure ~\ref{fig:architecture}. Most of the current controllers offer a so-called northbound interface (usually a REST API) to communicate with applications and to offer them services. The southbound interface is for communicating with the actual physical and virtual switches in the network.
 
 \begin{figure}[ht!]
 \centering
