--- a/4-discuss.tex
+++ b/4-discuss.tex
@@ -8,7 +8,7 @@ Kreutz et al. suggest other general solutions to counter possible security threa
 
 \subsection{Service Chaining Obstacles}
 
-In section 3, we discussed about network service chaining and its benefits, however NSC comes with its own challenges. Current network service structure is tight with the network topology, which makes introducing new services or removing them from the chain troublesome. If more services needed in the chain, the topology should be changed alongside with the new service structure. Due to this coupling between network topology and the service chain, service selection or changing the service transit order, based on flow direction is not feasible. \cite{QN14}
+In Section 3, we discussed network service chaining and its benefits, however NSC comes with its own challenges. Current network service structure is tight with the network topology, which makes introducing new services or removing them from the chain troublesome. If more services needed in the chain, the topology should be changed alongside with the new service structure. Due to this coupling between network topology and the service chain, service selection or changing the service transit order, based on flow direction is not feasible. \cite{QN14}
 
 A direct impact of topological dependency is that configuration of network become complex. If new service needs to be introduced in the service chain, the whole network should be configured again. Therefore once the topology is installed, the network operator tries to avoid any changes in order to not encounter any misconfiguration and consequently breaking down the network, which can constrain the high availability of network.
 
